2818 - Table checkbox overlapping fix (#2829)

--- a/stencil-workspace/src/components/modus-table/modus-table.scss
+++ b/stencil-workspace/src/components/modus-table/modus-table.scss
@@ -69,7 +69,7 @@ table {
     }
   }
 
-  &.ce th,
+  th,
   td {
     box-sizing: border-box;
 
